# assignment_test

./: .gitignore  ASSIGNMENT.md  Abstrakt.txt  Makefile  README.md  docker-compose.yml  navod.odt  package-lock.json  package.json  pyproject.toml
backend/: .env.example  app.py  router.py  settings.py  test_graphql.txt  utils.py
backend/db/: data_messages.py  users.py
backend/filters/: base.py
backend/middleware/: auth.py
backend/schema/: __init__.py  middleware.py  mutations.py
backend/schema/mutations/: __init__.py
backend/schema/mutations/auth/: __init__.py  resolver.py
backend/schema/query/: __init__.py
backend/schema/query/auth/: __init__.py  resolver.py
backend/schema/query/messages/: __init__.py  activity_resolver.py  activity_types.py  attack_type_distribution_resolver.py  attack_types.py  metrics_resolver.py  metrics_types.py  resolver.py  types.py
backend/schema/query/users/: __init__.py  resolver.py
backend/services/: authorization_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/components/auth/: LoginForm.tsx  LoginPage.tsx  ProtectedRoute.tsx
frontend/src/components/cards/: CommonAttackCard.tsx  (+3 more)
frontend/src/constants/: colors.ts
frontend/src/context/: AuthContext.tsx  FiltersContext.tsx
frontend/src/graphql/: mutations.ts
frontend/src/hooks/: useActivityData.ts  useAttackTypeDistributionData.ts  useColorScheme.ts  useMetrics.ts  useTableData.tsx  useTypeColor.ts
frontend/src/types/: activity.ts  distributionChart.ts  metrics.ts  table.ts
(+46 files in other folders)
